[tool.poetry]
name = "multi-experience-replay"
version = "0.1.0"
description = ""
authors = ["Anil Zeybek <anilzeybek@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.2"
torch = {url = "https://download.pytorch.org/whl/cpu/torch-1.10.1%2Bcpu-cp38-cp38-linux_x86_64.whl"}
gym = "^0.21.0"
Box2D = "^2.3.10"
cpprb = "^10.5.1"
pyglet = "^1.5.21"
pandas = "^1.4.1"
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
